# monky

./: Cargo.toml  README.md  monky-log.yml
eldiro/: Cargo.toml
eldiro-cli/: Cargo.toml
eldiro-cli/src/: main.rs
eldiro/lexer/: Cargo.toml
eldiro/lexer/src/: lib.rs  token_kind.rs
eldiro/parser/: Cargo.toml
eldiro/parser/src/: event.rs  expr.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
eldiro/parser/src/grammar/: expr.rs  stmt.rs
eldiro/parser/src/parser/: marker.rs  parse_error.rs
eldiro/src/: lexer.rs  parser.rs  syntax.rs
eldiro/src/parser/: expr.rs  marker.rs  sink.rs  source.rs
eldiro/syntax/: Cargo.toml
eldiro/syntax/src/: lib.rs
monky/: Cargo.toml
monky-test-macros/: Cargo.toml
monky-test-macros/src/: lib.rs
monky/src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  object.rs  parser.rs  syntax.rs  token.rs  value.rs
repl/: Cargo.toml
repl/src/: main.rs
