[package]
name = "monky"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
maplit = "1.0.2"
monky-test-macros = { path = "../monky-test-macros" }
once_cell = "1.7.2"

[dev-dependencies]
