[package]
name = "monky"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
logos = "0.12.0"
maplit = "1.0.2"
monky-test-macros = { path = "../monky-test-macros" }
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.7.2"
rowan = "0.12.6"

[dev-dependencies]
expect-test = "1.1.0"
