[package]
name = "repl"
version = "0.1.0"
authors = ["onContentStop <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
indicatif = "0.15.0"
log = "0.4.14"
log4rs = { version = "1.0.0", features = ["console_appender"] }
monky = { path = "../monky" }
